<?xml version="1.0"?>
<package format="3">
  <name>jetrover_agent</name>
  <version>0.1.0</version>
  <description>LLM-planned semantic robot agent for JetRover / ROS2.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ros2launch</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
